--- a/content/posts/rich-content-with-mdx.mdx
+++ b/content/posts/rich-content-with-mdx.mdx
@@ -2,23 +2,13 @@
 slug: rich-content-with-mdx
 title: Rich Content with MDX
 date: 2020-06-08
-author: wutali
+author: lucca
 tags:
   - style
   - mdx
 ---
 
 MDX supports to import React component and embed it directly as markdown content.
-
-## Instagram with react-instagram-embed
-
-<p>
-  <InstagramEmbed
-    url="https://instagr.am/p/Zw9o4/"
-    maxWidth={320}
-    hideCaption={true}
-  />
-</p>
 
 ## YouTube with react-youtube
 
