Apply font-smoothing

--- a/content/posts/markdown-syntax.mdx
+++ b/content/posts/markdown-syntax.mdx
@@ -8,7 +8,7 @@ tags:
   - markdown
 ---
 
-This article offers a sample of basic Markdown syntax that can be used in Hugo content files, also it shows whether basic HTML elements are decorated with CSS in MDX.
+So far, the handbook has covered types which are atomic objects. However, as you model more types you find yourself looking for tools which let you compose or combine existing types instead of creating them from scratch.
 
 ## Headings
 
