adjust styles and add propper about page

--- a/content/posts/markdown-syntax.mdx
+++ b/content/posts/markdown-syntax.mdx
@@ -1,6 +1,7 @@
 ---
 slug: "markdown-syntax"
 title: "Markdown Syntax Guide"
+subtitle: "How to improve your TypeScript object types with unions"
 date: 2020-06-09
 author: lucca
 tags:
@@ -24,7 +25,6 @@ The following HTML `<h1>`—`<h6>` elements represent six levels of section head
 
 ##### H5
 
-###### H6
 
 ## Paragraph
 
