--- a/content/posts/learn-in-public.mdx
+++ b/content/posts/learn-in-public.mdx
@@ -1,31 +1,32 @@
 ---
-slug: learnpublic
+slug: learn-in-public
 title: In der Öffentlichkeit lernen
 date: 2020-05-29
 author: lucca
 tags:
   - german
+  - meta-learning
 ---
 
-Dies ist eine Übersetzung des [Original Beitrags](https://www.swyx.io/learn-in-public/) von Shawn Wang (@swyx) 19. Juni 2018
+Dies ist eine Übersetzung des [Original Beitrags](https://www.swyx.io/learn-in-public/) von Shawn Wang ([@swyx](https://twitter.com/swyx))
 
 # In der Öffentlichkeit lernen
 ## Der schnellste Weg zum Lernen
-Der schnellste Weg, um Ihr Fachwissen, Ihr professionelles Netzwerk und Ihr zweites Gehirn aufzubauen. #Rat #LearnInPublic
+Der schnellste Weg, um dein Fachwissen, dein professionelles Netzwerk und dein zweites Gehirn aufzubauen. #Rat #LearnInPublic
 
 Wenn es eine goldene Regel gibt, dann diese, also stelle ich sie an erste Stelle. Alle anderen Regeln sind mehr oder weniger Weiterentwicklungen dieser Regel #1.
 
-Sie wissen bereits, dass Sie Lernen ein nie endender Prozess ist. Aber die meisten Leute "lernen privat" und halten sich bedeckt. Sie konsumieren Inhalte, ohne sie selbst zu erstellen. Das ist in Ordnung, aber wir sind hier, um darüber zu sprechen, im obersten Quintil zu sein. Was Sie hiermit tun, ist eine Gewohnheit, Lerninhalte zu produzieren:
+Du wissen bereits, dass Lernen ein nie endender Prozess ist. Aber die meisten Leute "lernen privat" und halten sich bedeckt. Sie konsumieren Inhalte, ohne sie selbst zu erstellen. Das ist in Ordnung, aber wir sind hier, um darüber zu sprechen, im obersten Quintil zu sein. Was Sie hiermit tun, ist eine Gewohnheit, Lerninhalte zu produzieren:
 
-* Schreiben Sie Blogs, Tutorials und Spickzettel.
-* Sprechen Sie bei Meetups und Konferenzen.
-* Fragen und beantworten Sie Dinge auf Stackoverflow oder Reddit. Vermeiden Sie die geschlossenen Communities wie Slack und Discord, sie sind nicht öffentlich.
-* Machen Sie Youtube-Videos oder Twitch-Streams.
-* Starten Sie einen Newsletter.
+* Schreibe Blogs, Tutorials und Spickzettel.
+* Spreche bei Meetups und Konferenzen.
+* Frage und beantworte Dinge auf Stackoverflow oder Reddit. Vermeide geschlossenen Communities wie Slack und Discord, sie sind nicht öffentlich zugänglich.
+* Erstelle Youtube-Videos oder streame auf Twitch.
+* Starte einen Newsletter.
 * Zeichne Cartoons (die Leute lieben Cartoons!).
-* Was auch immer Ihr Ding ist, produzieren Sie das, was Sie sich gewünscht hätten, als Sie gelernt haben. Beurteilen Sie Ihre Ergebnisse nicht nach "claps", Retweets, Stars oder Upvotes - sprechen Sie einfach mit sich selbst von vor 3 Monaten. Ich führe einen fast täglichen Entwickler-Blog, der nur für mich geschrieben wurde.
+* Was auch immer dein Ding ist, produziere das, was du dir gewünscht hättest, wenn du lernst. Beurteile deine Ergebnisse nicht nach "claps", Retweets, Stars oder Upvotes - sprech einfach mit dir selbst von vor 3 Monaten. Ich führe einen fast täglichen Entwickler-Blog, der nur für mich geschrieben wurde.
 
-Und weißt du was? Es geht nicht darum, mit deinen Inhalten so viele Menschen wie möglich zu erreichen. Wenn du das kannst, großartig, erinnere dich an mich, wenn du berühmt bist. Aber die Chancen stehen gut, dass bei weitem der größte Profiteur von Ihnen, der versucht, Ihnen zu helfen, zukünftig du bist. Wenn andere davon profitieren, ist das das Sahnehäubchen.
+Und weißt du was? Es geht nicht darum, mit deinen Inhalten so viele Menschen wie möglich zu erreichen. Wenn du das kannst, großartig, erinnere dich an mich, wenn du berühmt bist. Aber die Chancen stehen gut, dass du in Zukunft bei weitem der größte Profiteur bist, von dem Versuch deinem vergangen Ich zu helfen. Wenn andere davon profitieren, ist das das Sahnehäubchen.
 
 Oh, du denkst, das war alles? Aber es geht noch weiter:
 
@@ -33,23 +34,23 @@ Oh, du denkst, das war alles? Aber es geht noch weiter:
 * Erstelle PRs für Bibliotheken, die du verwendest.
 * Erstelle deine eigenen Bibliotheken, die niemand jemals verwenden wird.
 * Baue Dinge die dir gefallen, von Grund auf nach, um zu sehen wie sie funktionieren.
-* unterrichte Workshops.
+* Unterrichte Workshops.
 * Besuche Konferenzen und fasse das Gelernte zusammen.
-* Wenn Sie es satt hast, einmalige Dinge zu erstellen, beginne mit dem Aufbau einer dauerhaften Wissensdatenbank, die mit der Zeit wächst. Open Source dein Wissen! Bei jedem Schritt des Weges: Dokumentiere, was du gemacht hast und welche Probleme du damit löst.
+* Wenn du es satt hast, einmalige Dinge zu erstellen, beginne mit dem Aufbau einer dauerhaften Wissensdatenbank, die mit der Zeit wächst. Open Source dein Wissen! Bei jedem Schritt des Weges: Dokumentiere, was du gemacht hast und welche Probleme du damit gelöst hast.
 
-Die Unterüberschrift unter dieser Regel wäre: Gebe dein bestes, um korrekt zu arbeiten, aber mach dir keine Sorgen, wenn du mal falsch liegst. Auch wenn das öfter passiert. Wenn du dich unwohl fühlst oder wie ein Betrüger, dann ist das gut. Du forderst dich. Gehe nicht davon aus, alles zu wissen, aber versuche trotzdem dein bestes und lass deine Fehler vom Internet korrigieren, wenn du unweigerlich einmal falsch liegen wirst. Mache deine Unerfahrenheit öffentlich sichtbar.
+Die Unterüberschrift unter dieser Regel wäre: Gebe dein bestes, um korrekt zu arbeiten, aber mach dir keine Sorgen, wenn du mal falsch liegst. Auch wenn das öfter passiert. Wenn du dich unwohl fühlst oder wie ein Hochstapler, dann ist das gut. Du forderst dich. Gehe nicht davon aus, alles zu wissen, aber versuche trotzdem dein bestes und lass deine Fehler vom Internet korrigieren, wenn du unweigerlich mal falsch liegen wirst. Gehe offen mit deiner mangelnden Ehrfahrung um.
 
-Die Leute denken du bist scheiße? Gut. Stimm ihnen zu. Bitten Sie, im Detail zu erklären, warum sie dich scheiße finden. Willst du dich gut fühlen oder gut sein? Keine Kompromisse, keine verletzten Gefühle. Dann lasse das Gespräch hinter dir und beweise ihnen, dass sie falsch liegen. Wenn sie dich natürlich beleidigend, blockiere Sie.
+Die Leute denken du bist scheiße? Gut. Stimm ihnen zu. Bitten Sie, im Detail zu erklären, warum sie dich scheiße finden. Willst du dich gut fühlen oder gut sein? Keine Kompromisse, keine verletzten Gefühle. Danach lasse das Gespräch hinter dir und beweise ihnen, dass sie falsch liegen. Wenn sie dich natürlich beleidigend, blockiere Sie.
 
-Habe ich schon erwähnt, dass Lehren der beste Weg zum Lernen ist? Kommentiere deine Handlungen, während dem programmieren. Es kann stressig sein und ich habe es nicht allzu oft gemacht, aber in meinen besten technischen Interviews habe ich kommunziert, als würde ich lehren, anstatt verzweifelt zu versuchen, mich zu beweisen. Wir sind Tiere, wir fühlen uns von Vertrauen angezogen und können Verzweiflung riechen.
+Habe ich schon erwähnt, dass Lehren der beste Weg zum Lernen ist? Kommentiere deine Handlungen, während dem programmieren. Es kann stressig sein und ich habe es nicht allzu oft gemacht, aber in meinen besten technischen Interviews habe ich kommuniziert, als würde ich lehren, anstatt verzweifelt zu versuchen, mich zu beweisen. Wir sind Tiere, wir werden von Selbstvertrauen angezogen und können Verzweiflung riechen.
 
-Irgendwann bekommst du Unterstützung hinter dir. Die Leute bemerken echte Lernende. Sie werden dir helfen wollen. Binde es ihnen nicht auf die Nase, aber sie sind deine Mentoren geworden. Das ist sehr wichtig: Sammel auf, was sie liegen lassen. Betrachten Sie als Anbieter/innen von Quests, die du erledigen musst. Wenn sie sagen: "Will mir jemand mit __ __ helfen?" Dann bist du der Schüler in der ersten Reihe der sofort die Hand hebt. Sie sind leitende Ingenieure/innen, einige der gefragtesten Leute in der Branche. Sie schenken dir Zeit, 1 on 1, wenn du ihnen hilfst (ps. und es gibt immer etwas, bei dem sie Hilfe brauchen). Sowas kann man mit Geld nicht bezahlen. Sie werden dich kostenlos unterrichten. Die meisten Menschen sehen nicht, was direkt vor ihnen liegt. Aber du nicht.
+Irgendwann bekommst du Unterstützung. Die Leute bemerken echte Lernende. Sie werden dir helfen wollen. Binde es ihnen nicht auf die Nase, aber sie sind deine Mentoren geworden. Das ist sehr wichtig: Sammel auf, was sie liegen lassen. Betrachten Sie als Anbieter/innen von Quests, die du erledigen musst. Wenn sie sagen: "Will mir jemand mit __ __ helfen?" Dann bist du der Schüler in der ersten Reihe der sofort die Hand hebt. Sie sind leitende Ingenieure/innen, einige der gefragtesten Leute in der Branche. Sie schenken dir Zeit, 1 on 1, wenn du ihnen hilfst (ps. und es gibt immer etwas, bei dem sie Hilfe brauchen). Sowas kann man mit Geld nicht bezahlen. Sie unterrichten dich kostenlos. Die meisten Menschen sehen nicht, was direkt vor ihnen liegt. Aber du nicht.
 
-"Warum sollten sie mir bei so vielen Junior-Entwicklern helfen?", fragst du.
+"Es gibt so viele Junior-Entwickler/innen, Warum sollten sie gerade mir helfen?", fragst du.
 
-Weil Sie in der Öffentlichkeit lernen. Indem sie dich lehren, lehren sie viele. Du wirst als Katalysator. Du hast etwas, dass sie nicht haben: die Mentalität eines Anfängers. Verstehst du wie es funktioniert?
+Weil du in der Öffentlichkeit lernst. Indem sie dich lehren, lehren sie viele. Du wirkst als Katalysator. Du hast etwas, dass sie nicht haben: die Mentalität eines Anfängers. Verstehst du wie es funktioniert?
 
-Irgendwann werden die Leute anfangen, dich um Hilfe zu bitten, wegen all der Dinge, die du veröffentlichst. 80% der Entwickler sind "verdeckt", sie schreiben oder sprechen nicht und nehmen nicht am öffentlichen Technologiediskurs teil. Aber du tust es. Du müsst ein Experte sein, oder? Sag ihnen nicht, dass du es nicht bist. Antworte so gut du können, und wenn du nicht weiterkommst oder falsch liegst, gibt es an deine Mentoren weiter.
+Irgendwann werden die Leute anfangen, dich um Hilfe zu bitten, wegen all der Dinge, die du veröffentlichst. 80% der Entwickler handeln "verdeckt", sie schreiben oder sprechen nicht und nehmen nicht am öffentlichen Technologiediskurs teil. Aber du tust es. Du müsst ein Experte sein, oder? Sag ihnen nicht, dass du es nicht bist. Antworte so gut du kannst, und wenn du nicht weiterkommst oder falsch liegst, gibt es an deine Mentoren weiter.
 
 Irgendwann gehen dir die Mentoren aus und du löst die Dinge einfach selbst. Du veröffentlichst jedoch immer noch Inhalte. Verstehst du wie es funktioniert?
 
@@ -57,4 +58,4 @@ In der Öffentlichkeit lernen.
 
 p.s. Am Ende des Tages werden sie dich auch für deine Hilfe bezahlen wollen. Viel öfter als du denken magst.
 
-Mehr [Links zum weiterlesen](https://www.swyx.io/learn-in-public/) im Original Artikel von Shawn Wang (@swyx)
+Mehr [Links zum weiterlesen](https://www.swyx.io/learn-in-public/) im Original Artikel von Shawn Wang ([@swyx](https://twitter.com/swyx))
