--- a/content/posts/learn-in-public.mdx
+++ b/content/posts/learn-in-public.mdx
@@ -15,14 +15,14 @@ Dies ist eine Übersetzung des [Original Beitrags](https://www.swyx.io/learn-in-
 
 Wenn es eine goldene Regel gibt, dann diese, also stelle ich sie an erste Stelle. Alle anderen Regeln sind mehr oder weniger Weiterentwicklungen dieser Regel #1.
 
-Du weißt bereits, dass Lernen ein nie endender Prozess ist. Aber die meisten Leute "lernen privat" und halten sich bedeckt. Sie konsumieren Inhalte, ohne sie selbst zu erstellen. Das ist in Ordnung, aber wir sind hier, um darüber zu sprechen, im obersten Quintil zu sein. Du entwickelst **eine Gewohnheit, Lerninhalte zu produzieren**:
+Du weißt bereits, dass Lernen ein nie endender Prozess ist. Aber die meisten Leute "lernen privat" und halten sich bedeckt. Sie konsumieren Inhalte, ohne sie selbst zu erstellen. Das ist in Ordnung, aber wir sind hier, um darüber zu sprechen, im obersten Quintil mitzuspielen. Du entwickelst **eine Gewohnheit, Lerninhalte zu produzieren**:
 
 * Schreibe Blogs, Tutorials und Spickzettel.
 * Spreche bei Meetups und Konferenzen.
-* Frage und beantworte Dinge auf Stackoverflow oder Reddit. Vermeide geschlossenen Communities wie Slack und Discord, sie sind nicht öffentlich zugänglich.
+* Frage und beantworte Dinge auf Stackoverflow oder Reddit. Vermeide geschlossenen Communities wie Slack und Discord, sie sind nicht öffentlich zugänglich
 * Erstelle Youtube-Videos oder streame auf Twitch.
 * Starte einen Newsletter.
-* Zeichne Cartoons (die [Leute](https://code-cartoons.com/) [lieben](https://wizardzines.com/) [Cartoon!](https://arkwright.github.io/scaling-react-server-side-rendering.html).
+* Zeichne Cartoons (die [Leute](https://code-cartoons.com/) [lieben](https://wizardzines.com/) [Cartoons!](https://arkwright.github.io/scaling-react-server-side-rendering.html).
 
 Was auch immer dein Ding ist, **produziere dass, was du dir gewünscht hättest**, als du gelernst hast. **Beurteile deine Ergebnisse nicht** nach "claps", Retweets, Stars oder Upvotes - sprech einfach mit dir selbst von vor 3 Monaten. Ich führe einen fast täglichen Entwickler-Blog, der nur für mich geschrieben wurde.
 
