visual adjustments to li's * fix typo in learn-in-public.mdx

--- a/content/posts/learn-in-public.mdx
+++ b/content/posts/learn-in-public.mdx
@@ -22,7 +22,7 @@ Du weißt bereits, dass Lernen ein nie endender Prozess ist. Aber die meisten Le
 * Frage und beantworte Dinge auf Stackoverflow oder Reddit. Vermeide geschlossenen Communities wie Slack und Discord, sie sind nicht öffentlich zugänglich
 * Erstelle Youtube-Videos oder streame auf Twitch.
 * Starte einen Newsletter.
-* Zeichne Cartoons (die [Leute](https://code-cartoons.com/) [lieben](https://wizardzines.com/) [Cartoons!](https://arkwright.github.io/scaling-react-server-side-rendering.html).
+* Zeichne Cartoons (die [Leute](https://code-cartoons.com/) [lieben](https://wizardzines.com/) [Cartoons!](https://arkwright.github.io/scaling-react-server-side-rendering.html)).
 
 Was auch immer dein Ding ist, **produziere dass, was du dir gewünscht hättest**, als du gelernst hast. **Beurteile deine Ergebnisse nicht** nach "claps", Retweets, Stars oder Upvotes - sprech einfach mit dir selbst von vor 3 Monaten. Ich führe einen fast täglichen Entwickler-Blog, der nur für mich geschrieben wurde.
 
