add learn-in-public tag to learn-in-public.mdx

--- a/content/posts/learn-in-public.mdx
+++ b/content/posts/learn-in-public.mdx
@@ -7,6 +7,7 @@ author: lucca
 tags:
   - german
   - meta-learning
+  - learn-in-public
 ---
 
 Dies ist eine Übersetzung des [Original Beitrags](https://www.swyx.io/learn-in-public/) von Shawn Wang ([@swyx](https://twitter.com/swyx))
