add tailwind update dependencies

--- a/content/posts/public-private-keys.mdx
+++ b/content/posts/public-private-keys.mdx
@@ -56,6 +56,6 @@ There is also a way to combine those two methods to protect the `message` from p
 
 
 ## Further Reads
-* Public Key Cryptography - Computerphile - https://www.youtube.com/watch?v=GSIDS_lvRv4
-* Explaining public-key cryptography to non-geeks - https://medium.com/@vrypan/explaining-public-key-cryptography-to-non-geeks-f0994b3c2d5
+* [Public Key Cryptography](https://www.youtube.com/watch?v=GSIDS_lvRv4) - Computerphile
+* [Explaining public-key cryptography to non-geeks](https://medium.com/@vrypan/explaining-public-key-cryptography-to-non-geeks-f0994b3c2d5)
 
