change name of previous article add asana-node-cli.mdx post

--- a/content/posts/favourite-debugging-method.mdx
+++ b/content/posts/favourite-debugging-method.mdx
@@ -1,6 +1,6 @@
 ---
 slug: favourite-debugging-method
-title: Having a conversation with yourself
+title: Debugging by talking to yourself
 subtitle: Reading and debugging code if you don't know where to start
 date: 2022-05-30
 author: lucca
