--- a/content/posts/public-private-keys.mdx
+++ b/content/posts/public-private-keys.mdx
@@ -22,11 +22,11 @@ This is where `public` and `private keys` come into play.
 ## Encryption
 Imagine instead of `1 key` you know have `2 keys`.
 
-<ImgWithText style={{height:"200px",width: "auto"}} url={"https://imgur.com/NvE13bf"} alt={"smeagol my private key"} width={"200px"}>
+<ImgWithText style={{height:"200px",width: "auto"}} url={"https://imgur.com/NvE13bf"} alt={"smeagol my private key"}>
     Your private key is your own little secret You never share it with anyone
 </ImgWithText>
 
-<ImgWithText style={{height:"200px",width: "auto"}} url={"https://imgur.com/J2K1eee"} alt={"spreading public key"} width={"200px"}>
+<ImgWithText style={{height:"200px",width: "auto"}} url={"https://imgur.com/J2K1eee"} alt={"spreading public key"}>
     Your public key on the other hand should be openly shared.
 </ImgWithText>
 
