add proper syntax highlighting with remark prism plugin

--- a/content/posts/edge-analytics.mdx
+++ b/content/posts/edge-analytics.mdx
@@ -43,7 +43,7 @@ with `deno` code.The `deno` runtime environment can natively run typescript, so 
 
 <Link url={"https://github.com/idkshite/idkshite.com/blob/daf3baa12211a49f405aaf306d0bce6de5374a60/tsconfig.json#L24"}>tsconfig.json</Link>
 
-```
+```json
 ...
 "exclude": [
    "node_modules",
