add shorts emoji

--- a/content/posts/nextjs-dynamic-import.mdx
+++ b/content/posts/nextjs-dynamic-import.mdx
@@ -1,6 +1,6 @@
 ---
 slug: nextjs-dynamic-import
-title: Import components dynamically with Next.js
+title: 🩳 Import components dynamically with Next.js
 subtitle: Reduce bundle size by dynamically importing react components
 date: 2022-06-08
 author: lucca
