remove shorts tag

--- a/content/posts/aliases-fish.mdx
+++ b/content/posts/aliases-fish.mdx
@@ -1,11 +1,10 @@
 ---
 slug: aliases-fish
-title: 🩳 Write your own global fish aliases
+title: Write your own global fish aliases
 subtitle: Harness fish-shell aliases to run global commands on your terminal
 date: 2022-06-03
 author: lucca
 tags:
-  - shorts
   - programming
   - learn-in-public
 ---
