--- a/content/posts/calculate-text-width.mdx
+++ b/content/posts/calculate-text-width.mdx
@@ -1,11 +1,10 @@
 ---
 slug: calculate-text-width
-title: 🩳 Calculate text width with canvas
+title: Calculate text width with canvas
 subtitle: Get the exact width of a text element with HTML Canvas
 date: 2022-06-05
 author: lucca
 tags:
-  - shorts
   - programming
   - learn-in-public
 ---
