--- a/content/posts/luxon-same-day.mdx
+++ b/content/posts/luxon-same-day.mdx
@@ -1,11 +1,10 @@
 ---
 slug: luxon-same-day
-title: 🩳 Is this date today? With Luxon
+title: Is this date today? With Luxon
 subtitle: Compare two dates while ignoring time, using Luxon
 date: 2022-06-06
 author: lucca
 tags:
-  - shorts
   - programming
   - learn-in-public
 ---
