--- a/content/posts/react-index-key.mdx
+++ b/content/posts/react-index-key.mdx
@@ -1,11 +1,10 @@
 ---
 slug: react-index-key
-title: 🩳 Don't use index as a react key prop
+title: Don't use index as a react key prop
 subtitle: Why it's not advisable to use an array index as your react key prop
 date: 2022-06-09
 author: lucca
 tags:
-  - shorts
   - programming
   - learn-in-public
 ---
