--- a/content/posts/vertical-center-bullet.mdx
+++ b/content/posts/vertical-center-bullet.mdx
@@ -1,11 +1,10 @@
 ---
 slug: vertical-center-bullet
-title: 🩳 Get your bullets aligned
+title: Get your bullets aligned
 subtitle: Center custom list bullet points vertically
 date: 2022-06-07
 author: lucca
 tags:
-  - shorts
   - programming
   - learn-in-public
 ---
