improve observe-object-property.mdx instructions

--- a/content/posts/observe-object-property.mdx
+++ b/content/posts/observe-object-property.mdx
@@ -59,7 +59,7 @@ We then return the current value of our new `_level` variable so the code relyin
 
 In the `set` function we're only recreating the expected behaviour behind setting `game.level` except we're saving the value in `_level` instead of `game.level`
 
-<mark>▶️ Uncomment // monkeyPatchLevelProperty(game); to see how the geter logs every time someone accessed game.level</mark>
+<mark>▶️ Open Replit and Uncomment // monkeyPatchLevelProperty(game); to see how the getter logs every time someone accessed game.level</mark>
 
 <Replit url="https://replit.com/@idkshite/Assign-Getters-and-Setters" filename="debug.js"/>
 
