add custom frontmatter for dev.to prepend frontmatter add cover_image to observe-object-property.mdx

--- a/content/posts/observe-object-property.mdx
+++ b/content/posts/observe-object-property.mdx
@@ -4,6 +4,7 @@ title: Reveal the hackerman with js getters and setters
 subtitle: Hook into changing object properties for debugging
 date: 2022-06-10
 author: lucca
+cover_image: https://i.imgur.com/hVoJGkY.gif
 tags:
   - programming
   - learn-in-public
