fixed cross posting (except for Video) replace CodeSandbox prop embedUrl with url for consistency.

--- a/content/posts/calculate-text-width.mdx
+++ b/content/posts/calculate-text-width.mdx
@@ -27,7 +27,7 @@ function getTextWidth(text, font, fontSize, fontWeight) {
 In this contrived example I fetched images from unsplash with the exact measurement retrieved from the
 `getTextWidth()` function.
 
-<CodeSandbox embedURL="https://codesandbox.io/embed/strikethrough-text-yjkeih?fontsize=14&hidenavigation=1&theme=dark"/>
+<CodeSandbox url="https://codesandbox.io/embed/strikethrough-text-yjkeih?fontsize=14&hidenavigation=1&theme=dark"/>
 
 
 
