--- a/content/posts/console-trace.mdx
+++ b/content/posts/console-trace.mdx
@@ -40,7 +40,7 @@ Make sure your dev-tools console is open, otherwise you may not see the full sta
 So why not used it everytime? Sadly `console.trace` is not supported in all environments.
 For example. If you open the built-in console of the codesandbox below, you won't see any stacktrace from `console.trace`.
 
-<CodeSandbox embedURL="https://codesandbox.io/embed/console-trace-and-console-log-new-error-xje6l3?fontsize=14&hidenavigation=1&theme=dark"/>
+<CodeSandbox url="https://codesandbox.io/embed/console-trace-and-console-log-new-error-xje6l3?fontsize=14&hidenavigation=1&theme=dark"/>
 
 Of course, I can also use a debugger to get the stacktrace from a breakpoint inside of a function.
 But there are scenarios where using a debugger is either impossible or impractical.
