update structure of observe-object-property.mdx add dev_to_tags

--- a/content/posts/observe-object-property.mdx
+++ b/content/posts/observe-object-property.mdx
@@ -5,19 +5,22 @@ subtitle: Hook into changing object properties for debugging
 date: 2022-06-10
 author: lucca
 cover_image: https://i.imgur.com/hVoJGkY.gif
+dev_to_tags:
+  - webdev
+  - javascript
+  - debugging
 tags:
   - programming
   - learn-in-public
 ---
 
 In this example we're observing a realtime hack of your own video game.
-Someone managed to sneak some code into your brand new "first-person-hack-and-slay-roguelite-moba" that gives players a pretty high level from the start.
-You dislike this new "feature" because it takes all the fun out of "the grind for earning xp".
+Someone managed to sneak some code into your brand new "first-person-hack-and-slay-roguelite-moba" that gives players a pretty high level from the start. You dislike this new "feature" because it takes all the fun out of "the grind for earning xp".
 So you sally forth to find the culprit inside your codebase.
 
-You know that the hacker is somehow directly increasing the level property in your game.
-You just have to find out how exactly they increased it.
+You know that the hacker is somehow directly increasing the level property in your game. You just have to find out how exactly they increased it.
 
+## Emoji Parade
 Just recently you've added a small widget to your game, that logs an "Emoji Parade" onto the screen.
 You were quite satisfied with its look. But something tells you this code may do more than just logging an "Emoji Parade".
 But how can you prove it? 🤔
