update photo in public-private-keys.mdx post

--- a/content/posts/public-private-keys.mdx
+++ b/content/posts/public-private-keys.mdx
@@ -29,7 +29,7 @@ Imagine instead of `1 key` you know have `2 keys`.
 
 <ImgWithText style={{height:"200px",width: "auto"}} url={"https://imgur.com/NvE13bf"} alt={"smeagol my private key"}>Your private key is your own little secret You never share it with anyone</ImgWithText>
 
-<ImgWithText style={{height:"200px",width: "auto"}} url={"https://imgur.com/J2K1eee"} alt={"spreading public key"}>Your public key on the other hand should be openly shared.</ImgWithText>
+<ImgWithText style={{height:"200px",width: "auto"}} url={"https://imgur.com/0vqg9Y7"} alt={"spreading public key"}>Your public key on the other hand should be openly shared.</ImgWithText>
 
 Those `2 keys` are created from the same function and are inherently connected. You can encrypt messages with your `private key` and decrypt them with your `public key`.
 
