add new tags update tags on all posts

--- a/content/posts/asana-node-cli.mdx
+++ b/content/posts/asana-node-cli.mdx
@@ -5,6 +5,7 @@ subtitle: Quickly build an asana CLI with node.js (oclif.io)
 date: 2022-05-31
 author: lucca
 tags:
+  - javascript
   - programming
   - learn-in-public
 ---
