--- a/content/posts/console-trace.mdx
+++ b/content/posts/console-trace.mdx
@@ -5,6 +5,7 @@ subtitle: Find out who executed your code with `console.trace()`
 date: 2022-06-04
 author: lucca
 tags:
+  - javascript
   - programming
   - debugging
   - learn-in-public
