--- a/content/posts/lazy-state-init.mdx
+++ b/content/posts/lazy-state-init.mdx
@@ -5,6 +5,8 @@ subtitle: set useState default value only once on initial render
 date: 2022-06-17
 author: lucca
 tags:
+  - react
+  - javascript
   - programming
   - learn-in-public
 ---
