--- a/content/posts/optional-object-property.mdx
+++ b/content/posts/optional-object-property.mdx
@@ -5,6 +5,7 @@ subtitle: Add a property to an object if it exists
 date: 2022-06-11
 author: lucca
 tags:
+  - javascript
   - programming
   - learn-in-public
 ---
