--- a/content/posts/replace-string-position.mdx
+++ b/content/posts/replace-string-position.mdx
@@ -5,6 +5,7 @@ subtitle: Use substring to replace a string at a start end end point
 date: 2022-06-13
 author: lucca
 tags:
+  - javascript
   - programming
   - learn-in-public
 ---
