--- a/content/posts/reset-vs-normalize.mdx
+++ b/content/posts/reset-vs-normalize.mdx
@@ -5,6 +5,7 @@ subtitle: When to use reset.css or normalize.css?
 date: 2022-06-14
 author: lucca
 tags:
+  - css
   - programming
   - learn-in-public
 ---
