--- a/content/posts/vertical-center-bullet.mdx
+++ b/content/posts/vertical-center-bullet.mdx
@@ -5,6 +5,7 @@ subtitle: Center custom list bullet points vertically
 date: 2022-06-07
 author: lucca
 tags:
+  - css
   - programming
   - learn-in-public
 ---
