--- a/content/posts/alter-key-value.mdx
+++ b/content/posts/alter-key-value.mdx
@@ -5,6 +5,7 @@ subtitle: Replace a key and value pair in a javascript object with .map
 date: 2022-06-16
 author: lucca
 tags:
+  - javascript
   - programming
   - learn-in-public
 ---
