--- a/content/posts/calculate-text-width.mdx
+++ b/content/posts/calculate-text-width.mdx
@@ -5,6 +5,7 @@ subtitle: Get the exact width of a text element with HTML Canvas
 date: 2022-06-05
 author: lucca
 tags:
+  - javascript
   - programming
   - learn-in-public
 ---
