--- a/content/posts/luxon-same-day.mdx
+++ b/content/posts/luxon-same-day.mdx
@@ -5,6 +5,7 @@ subtitle: Compare two dates while ignoring time, using Luxon
 date: 2022-06-06
 author: lucca
 tags:
+  - javascript
   - programming
   - learn-in-public
 ---
