--- a/content/posts/print-object-node.mdx
+++ b/content/posts/print-object-node.mdx
@@ -5,6 +5,7 @@ subtitle: Use console.dir to log all properties of an object
 date: 2022-06-12
 author: lucca
 tags:
+  - javascript
   - programming
   - learn-in-public
 ---
