--- a/content/posts/react-index-key.mdx
+++ b/content/posts/react-index-key.mdx
@@ -5,6 +5,8 @@ subtitle: Why it's not advisable to use an array index as your react key prop
 date: 2022-06-09
 author: lucca
 tags:
+  - react
+  - javascript
   - programming
   - learn-in-public
 ---
