--- a/content/posts/compare-visual-changes.mdx
+++ b/content/posts/compare-visual-changes.mdx
@@ -4,6 +4,12 @@ title: Poor man's visual regression testing
 subtitle: Compare visual changes between localhost and production. Detect CSS changes
 date: 2022-06-21
 author: lucca
+cover_image: https://i.imgur.com/Q51fiSA.gif
+dev_to_tags:
+  - css
+  - programming
+  - testing
+  - webdev
 tags:
   - css
   - programming
