update post emoji

--- a/content/posts/godot-vectors-print.mdx
+++ b/content/posts/godot-vectors-print.mdx
@@ -13,7 +13,7 @@ tags:
   - learn-in-public
 ---
 
-In this post I showcase how little shite I know about game development.😅
+In this post I showcase how little shite I know about game development.💩
 It's a simple example of how you can draw a line in Godot to visualize Vectors.
 
 # Drawing some lines
