--- a/content/posts/authentication-authorization.mdx
+++ b/content/posts/authentication-authorization.mdx
@@ -9,12 +9,12 @@ tags:
   - learn-in-public
 ---
 
-What's the difference between authentication and authorization.
+What's the difference between *authentication* and *authorization*.
 I often hear them used interchangeably, but they have separate meaning.
 
 ## Authentication
-During authentication the user is identified. So we could call it Identification. But Authentication puts an emphasis "Authenticity", on "proving the user is who they claim to be".
-Your travel passport is a common way of Authenticating yourself towards authorities of foreign countries. (for example at the broder control).
+During authentication the user is identified. So we could call it Identification. But Authentication puts an emphasis on "Authenticity", on "proving the user is who they claim to be".
+Your travel passport is a common way of Authenticating yourself towards the authorities of foreign countries. (for example at the border control).
 In a digital context, a user authenticates themselves through a password, fingerprint, face-recognition. Because the system assumes, only this person has access to this identifier.
 
 
