add Eddie Woo Video

--- a/content/posts/what-the-pipe.mdx
+++ b/content/posts/what-the-pipe.mdx
@@ -28,9 +28,13 @@ If `a = 3.14` then `|a|` equals the value `3.14`
 
 You can see the two `|` `|` surrounding the variable name as some kind of programming function that returns the distance from `0` to `a`.
 In-fact it exists in languages like `C#` as the `{Math.Abs(value)}` function.
+But even if this function wouldn't exist in your programming language of choice you could implement it as `sqrt(a^2)` (sqrt is the square-root).
+Making `a` squared gets rid of the algebraic sign (2*2 and -2*-2 are both 4). And the square root reverses the effect of the quadration without gaining back the algebraic sign.
+
 
 In mathematical terms `|a|` you may come across this notation described ast the `absolute value` or `modulus` of the real number `a`.
 
+In case you're looking for a more exhaustive definition, I can recommend this [3 part video by Eddie Woo](https://www.youtube.com/watch?v=RzpnElPDJcA).
 
 
 
