add Maths Disclaimer

--- a/content/posts/what-the-pipe.mdx
+++ b/content/posts/what-the-pipe.mdx
@@ -9,7 +9,7 @@ tags:
   - learn-in-public
 ---
 
-<mark>In this post i'm trying to shed some light on the cryptic nature of mathematic formulas. This is definition is guaranteed to be incomplete because i don't know shite about math. 💩</mark>
+<MathDisclaimer/>
 
 What does it mean if a variable in a Mathematics formula is surrounded by two vertical lines?
 
