add gif (very important)

--- a/content/posts/vanilla-graphql-query.mdx
+++ b/content/posts/vanilla-graphql-query.mdx
@@ -12,8 +12,10 @@ tags:
 
 If I have the choice between requesting data via a **REST API** or a **GraphQL API** I perceive the REST API as the simpler option.
 The one that causes fewer headaches. But I'm pretty sure that's mainly because I have the impression that requesting data from a GraphQL API requires a library.
-And to be honest, I haven't looked at the source code of [ApolloClient](https://www.npmjs.com/package/@apollo/client) or any other GraphQL client.
-In this post I have challenged myself to prove that I don't necessarily need a library to make a GraphQL request.
+And to be honest, I haven't looked at the source code of [ApolloClient](https://www.npmjs.com/package/@apollo/client) or any other GraphQL client. So I assume it must be complex.
+<Imgur url="https://i.imgur.com/xsHPrAf.gif"/>
+
+In this post I have challenged myself to **prove** that I don't necessarily need a library to make a GraphQL request.
 
 ## No magic involved 🧙
 
